Project

General

Profile

Actions

Bug #14958

closed

rand(endless_range) raises TypeError (no implicit conversion of Range into Integer)

Bug #14958: rand(endless_range) raises TypeError (no implicit conversion of Range into Integer)

Added by znz (Kazuhiro NISHIYAMA) about 8 years ago. Updated about 8 years ago.

Status:
Closed
Assignee:
-
Target version:
ruby -v:
ruby 2.6.0dev (2018-08-01 trunk 64154) [x86_64-linux]
[ruby-core:88261]

Description

I think TypeError message is a bit strange.

$ ruby -v
ruby 2.6.0dev (2018-08-01 trunk 64154) [x86_64-linux]
$ ruby -e 'p rand(1..1)'
1
$ ruby -e 'rand(1..)'
Traceback (most recent call last):
        1: from -e:1:in `<main>'
-e:1:in `rand': no implicit conversion of Range into Integer (TypeError)
$ ruby -e 'rand(nil..nil)'
Traceback (most recent call last):
        1: from -e:1:in `<main>'
-e:1:in `rand': no implicit conversion of Range into Integer (TypeError)

Updated by znz (Kazuhiro NISHIYAMA) about 8 years ago Actions #1

  • Description updated (diff)

Updated by nobu (Nobuyoshi Nakada) about 8 years ago Actions #2

  • Status changed from Open to Closed

Applied in changeset trunk|r64167.


random.c: endless range random

Actions

Also available in: PDF Atom